--- a/exo1/index.html
+++ b/exo1/index.html
@@ -6,7 +6,6 @@
       </head> 
       <body>
           <h1>Titre de la page</h1>
-          <p>Peut-être que ceci est un paragraphe.</p>
-          <p>Quelques accents (c'est gratuit) : à, é, è, ê.</p>
+          <p>Peut-être que ceci est un paragraphe. Quelques accents (c'est gratuit) : à, é, è, ê.</p>
       </body>
   </html>
