--- a/exo4/index.html
+++ b/exo4/index.html
@@ -5,7 +5,7 @@
           <title>Liens tutos</title>
       </head> 
       <body>
-          <h1><img src="C:/Users/Alexis/Documents/exo - HTMLCSS/exo4/images/bloc-note-stylo.png"> Tout les petits trucs qui me seront utiles pour la suite</h1>
+          <h1><img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png" alt="Texte alternatif" title="Quel beau carnet"> Tout les petits trucs qui me seront utiles pour la suite</h1>
           <p>Le site de codeacademy est <a href="https://www.codecademy.com/">ici</a></p>
           <p>Pour pleins de tuto sympa, il y aussi <a href="https://openclassrooms.com/fr/">openclassroom</a></p>
           <p><a href="https://doc.ubuntu-fr.org/">Si je veux devenir un crack sur Ubuntu, il me faut la bonne adresse</a></p>
