Mise à jour index

--- a/exo3/index.html
+++ b/exo3/index.html
@@ -6,11 +6,13 @@
       </head> 
       <body>
           <h1>Ma liste de courses du 7 Mai 2016</h1>
-            <p>Il me faut plusieurs choses :</p><br>
-            <p>&bull; Une baguette</p>
-            <p>&bull; 2 <span style="color:red";>kilos</span> de tomates</p>
-            <p>&bull; 3 <span style="color:green";>litres</span> de lait</p>
-            <p>&bull; 5 <b>boites</b> de chewing gum</p></br>
+            <p>Il me faut plusieurs choses :</p>
+            <ul>
+                <li>Une baguette</li>
+                <li>2 <span style="color:red">kilos</span> de tomates</li>
+                <li>3 <span style="color:green">litres</span> de lait</li>
+                <li>5 <span style="font-weight:bold">boites</span> de chewing gum</li>
+            </ul>
             <p><i>Payer en liquide ou par chèque.</i></p>
       </body>
   </html>
