--- a/exo5/index.html
+++ b/exo5/index.html
@@ -52,8 +52,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="2" align="center">Solde</td>
-                <td colspan="2" align="center">575,40</td>
+                <td colspan="2">Solde</td>
+                <td colspan="2">575,40</td>
             </tr>
         </tfoot>
     </table>
